# home-interview-write-integrate-climate-loss-calcs

./: .gitignore  README.md  data.json  example_notebook.ipynb  exercise1_losses_calculator.py  exercise1_losses_calculator_optimization.py  pyproject.toml  requirements.txt
src/api/: app.py
src/loss_calc/: exercise1_losses_calculator.py  exercise1_losses_calculator_dask.py  exercise1_losses_calculator_spark.py  generate_data.py
tests/: tests.py
